examples/type_system/failing/165_self_recursive_precision_prefers_e300.flx
fn loop_back(n) {
    if n == 0 {
        0
    } else {
        loop_back(n - 1)
    }
}

fn main() -> Unit {
    let x: String = loop_back(3)
}
